--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,7 @@ button:hover {
     border-radius: 12px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
     border: 3px solid #f39c12;
+    max-height: 400px;
 }
 
 /*------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
